# hl7conv

./: .gitignore  Makefile  pyproject.toml  setup.cfg  Диаграмма без названия.drawio
.github/workflows/: pull_request.yaml
data/: filenames.txt  hrefs.txt
hl7conv/: __init__.py  convert.py  hl7.py  hl7json.py  util.py  validation.py
hl7conv/schemas/: general_types.py  versions.py
hl7conv/schemas/versions/: v2_5_1.py
hl7conv/schemas/versions/v2_1/: enums.py  v2_1.py
hl7conv/schemas/versions/v2_2/: enums.py
hl7conv/schemas/versions/v2_3/: enums.py
hl7conv/schemas/versions/v2_3_1/: enums.py
hl7conv/schemas/versions/v2_4/: enums.py
hl7conv/schemas/versions/v2_5/: enums.py
hl7conv/schemas/versions/v2_5_1/: enums.py  primitive_validators.py  types.py  v2_5_1.py
hl7conv/schemas/versions/v2_6/: enums.py
hl7conv/schemas/versions/v2_7/: enums.py
hl7conv/schemas/versions/v2_7_1/: enums.py
hl7conv/schemas/versions/v2_8/: enums.py
special script/: WriteDataInFile.py  file creator.py  tables scraper.py
