[tool.poetry]
name = "hl7conv"
version = "0.1.0"
description = ""
authors = ["IlyaKalosha1 <ikalosha@remedypointsolutions.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.4"


[tool.poetry.dev-dependencies]
ipython = "^8.4.0"
mypy = "^0.961"
flake8 = "^4.0.1"
isort = "^5.10.1"
safety = "^2.3.1"
black = "22.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
